# encryptionproject

./: LICENSE  README.md  detector.py  entropy.py  file_handlers.py  log0.5.txt  magika_detector.py  main.py  type_utils.py
EncryptionProject/: pyproject.toml  setup.py
EncryptionProject/password_detector_package/: __init__.py  detector.py  entropy.py  file_handlers.py  magika_detector.py  sync_detector.py  type_utils.py
EncryptionProject/scripts/: run_detector.py
EncryptionProjectUpdated/: setup.py
EncryptionProjectUpdated/password_detector_package/: __init__.py  detector.py  entropy.py  file_handlers.py  sync_detector.py  type_utils.py
EncryptionProjectUpdated/scripts/: run_detector.py
documents/: How Did Software Licenses Emerge.docx  License Research.docx  License_Information_For_External_Lib.docx  Python Concurrency Research.docx  SRS for Detector Project.docx  Test Report for Detector Project.docx
olderfiles/olddocuments/: Python Concurrency Research.docx  SRS for Detector Project.docx
olderfiles/v1Final/: detector.py  entropy.py  file_handlers.py  magika_detector.py  main.py  type_utils.py
olderfiles/v2withAsync/: README.md  detector.py  entropy.py  file_handlers.py  log150GB.txt  magika_detector.py  main.py  type_utils.py
v1Final/: entropy.py
v2withAsync/: README.md  detector.py  file_handlers.py  log150GB.txt  magika_detector.py  main.py  type_utils.py
